[gd_scene load_steps=3 format=3 uid="uid://bou71h2jbaco"]

[ext_resource type="Theme" uid="uid://dq33ynkq606di" path="res://resources/themes/main_theme.tres" id="1_ovrgc"]
[ext_resource type="Script" uid="uid://b3u3thye6i412" path="res://main_menu.gd" id="2_2o76q"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_ovrgc")
script = ExtResource("2_2o76q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.101960786, 0, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TittleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84313726, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "DUNGEON TALES"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "START GAME"

[node name="SettingsButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "V0.1.0"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
